etapa2/parser.output
Terminais sem uso na gramática

    TK_PR_IF
    TK_PR_THEN
    TK_PR_ELSE
    TK_PR_WHILE
    TK_PR_INPUT
    TK_PR_OUTPUT
    TK_PR_RETURN
    TK_PR_FOR
    TK_OC_LE
    TK_OC_GE
    TK_OC_EQ
    TK_OC_NE
    TK_OC_AND
    TK_OC_OR
    TK_LIT_FLOAT
    TK_LIT_FALSE
    TK_LIT_TRUE
    TK_LIT_CHAR
    TK_ERRO


Gramática

    0 $accept: programa $end

    1 programa: lista_de_elementos
    2         | ε

    3 lista_de_elementos: declaracao
    4                   | lista_de_elementos declaracao

    5 declaracao: tipo lista_identificador

    6 lista_identificador: TK_IDENTIFICADOR array ',' lista_identificador
    7                    | TK_IDENTIFICADOR array ';'

    8 array: '[' TK_LIT_INT ']'
    9      | '[' lista_de_literais_inteiros ']'
   10      | ε

   11 lista_de_literais_inteiros: TK_LIT_INT '^' lista_de_literais_inteiros
   12                           | ε

   13 tipo: TK_PR_FLOAT
   14     | TK_PR_INT
   15     | TK_PR_CHAR
   16     | TK_PR_BOOL


Terminais, com as regras onde eles aparecem

    $end (0) 0
    ',' (44) 6
    ';' (59) 7
    '[' (91) 8 9
    ']' (93) 8 9
    '^' (94) 11
    error (256)
    TK_PR_INT (258) 14
    TK_PR_FLOAT (259) 13
    TK_PR_BOOL (260) 16
    TK_PR_CHAR (261) 15
    TK_PR_IF (262)
    TK_PR_THEN (263)
    TK_PR_ELSE (264)
    TK_PR_WHILE (265)
    TK_PR_INPUT (266)
    TK_PR_OUTPUT (267)
    TK_PR_RETURN (268)
    TK_PR_FOR (269)
    TK_OC_LE (270)
    TK_OC_GE (271)
    TK_OC_EQ (272)
    TK_OC_NE (273)
    TK_OC_AND (274)
    TK_OC_OR (275)
    TK_LIT_INT (276) 8 11
    TK_LIT_FLOAT (277)
    TK_LIT_FALSE (278)
    TK_LIT_TRUE (279)
    TK_LIT_CHAR (280)
    TK_IDENTIFICADOR (281) 6 7
    TK_ERRO (282)


Não terminais com as regras onde eles aparecem

    $accept (33)
        à esquerda: 0
    programa (34)
        à esquerda: 1 2
        à direita: 0
    lista_de_elementos (35)
        à esquerda: 3 4
        à direita: 1 4
    declaracao (36)
        à esquerda: 5
        à direita: 3 4
    lista_identificador (37)
        à esquerda: 6 7
        à direita: 5 6
    array (38)
        à esquerda: 8 9 10
        à direita: 6 7
    lista_de_literais_inteiros (39)
        à esquerda: 11 12
        à direita: 9 11
    tipo (40)
        à esquerda: 13 14 15 16
        à direita: 5


Estado 0

    0 $accept: • programa $end

    TK_PR_INT    deslocar, e ir ao estado 1
    TK_PR_FLOAT  deslocar, e ir ao estado 2
    TK_PR_BOOL   deslocar, e ir ao estado 3
    TK_PR_CHAR   deslocar, e ir ao estado 4

    $padrão  reduzir usando a regra 2 (programa)

    programa            ir ao estado 5
    lista_de_elementos  ir ao estado 6
    declaracao          ir ao estado 7
    tipo                ir ao estado 8


Estado 1

   14 tipo: TK_PR_INT •

    $padrão  reduzir usando a regra 14 (tipo)


Estado 2

   13 tipo: TK_PR_FLOAT •

    $padrão  reduzir usando a regra 13 (tipo)


Estado 3

   16 tipo: TK_PR_BOOL •

    $padrão  reduzir usando a regra 16 (tipo)


Estado 4

   15 tipo: TK_PR_CHAR •

    $padrão  reduzir usando a regra 15 (tipo)


Estado 5

    0 $accept: programa • $end

    $end  deslocar, e ir ao estado 9


Estado 6

    1 programa: lista_de_elementos •
    4 lista_de_elementos: lista_de_elementos • declaracao

    TK_PR_INT    deslocar, e ir ao estado 1
    TK_PR_FLOAT  deslocar, e ir ao estado 2
    TK_PR_BOOL   deslocar, e ir ao estado 3
    TK_PR_CHAR   deslocar, e ir ao estado 4

    $padrão  reduzir usando a regra 1 (programa)

    declaracao  ir ao estado 10
    tipo        ir ao estado 8


Estado 7

    3 lista_de_elementos: declaracao •

    $padrão  reduzir usando a regra 3 (lista_de_elementos)


Estado 8

    5 declaracao: tipo • lista_identificador

    TK_IDENTIFICADOR  deslocar, e ir ao estado 11

    lista_identificador  ir ao estado 12


Estado 9

    0 $accept: programa $end •

    $padrão  aceitar


Estado 10

    4 lista_de_elementos: lista_de_elementos declaracao •

    $padrão  reduzir usando a regra 4 (lista_de_elementos)


Estado 11

    6 lista_identificador: TK_IDENTIFICADOR • array ',' lista_identificador
    7                    | TK_IDENTIFICADOR • array ';'

    '['  deslocar, e ir ao estado 13

    $padrão  reduzir usando a regra 10 (array)

    array  ir ao estado 14


Estado 12

    5 declaracao: tipo lista_identificador •

    $padrão  reduzir usando a regra 5 (declaracao)


Estado 13

    8 array: '[' • TK_LIT_INT ']'
    9      | '[' • lista_de_literais_inteiros ']'

    TK_LIT_INT  deslocar, e ir ao estado 15

    $padrão  reduzir usando a regra 12 (lista_de_literais_inteiros)

    lista_de_literais_inteiros  ir ao estado 16


Estado 14

    6 lista_identificador: TK_IDENTIFICADOR array • ',' lista_identificador
    7                    | TK_IDENTIFICADOR array • ';'

    ','  deslocar, e ir ao estado 17
    ';'  deslocar, e ir ao estado 18


Estado 15

    8 array: '[' TK_LIT_INT • ']'
   11 lista_de_literais_inteiros: TK_LIT_INT • '^' lista_de_literais_inteiros

    ']'  deslocar, e ir ao estado 19
    '^'  deslocar, e ir ao estado 20


Estado 16

    9 array: '[' lista_de_literais_inteiros • ']'

    ']'  deslocar, e ir ao estado 21


Estado 17

    6 lista_identificador: TK_IDENTIFICADOR array ',' • lista_identificador

    TK_IDENTIFICADOR  deslocar, e ir ao estado 11

    lista_identificador  ir ao estado 22


Estado 18

    7 lista_identificador: TK_IDENTIFICADOR array ';' •

    $padrão  reduzir usando a regra 7 (lista_identificador)


Estado 19

    8 array: '[' TK_LIT_INT ']' •

    $padrão  reduzir usando a regra 8 (array)


Estado 20

   11 lista_de_literais_inteiros: TK_LIT_INT '^' • lista_de_literais_inteiros

    TK_LIT_INT  deslocar, e ir ao estado 23

    $padrão  reduzir usando a regra 12 (lista_de_literais_inteiros)

    lista_de_literais_inteiros  ir ao estado 24


Estado 21

    9 array: '[' lista_de_literais_inteiros ']' •

    $padrão  reduzir usando a regra 9 (array)


Estado 22

    6 lista_identificador: TK_IDENTIFICADOR array ',' lista_identificador •

    $padrão  reduzir usando a regra 6 (lista_identificador)


Estado 23

   11 lista_de_literais_inteiros: TK_LIT_INT • '^' lista_de_literais_inteiros

    '^'  deslocar, e ir ao estado 20


Estado 24

   11 lista_de_literais_inteiros: TK_LIT_INT '^' lista_de_literais_inteiros •

    $padrão  reduzir usando a regra 11 (lista_de_literais_inteiros)
